--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class=" emergence"><head>
+<html lang="en">
+<head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-145352703-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145352703-1"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -33,7 +34,7 @@
     }
     //-->
   </script>
-  <script language="javascript">
+  <script language=javascript>
     <!--
     if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
     location.replace("mobile.html");
@@ -294,8 +295,8 @@
 
   </style>
 </head>
-<body style="height: 2519px;">
-  <div class="loader" id="loader" style="display: none;">
+<body>
+  <div class="loader" id="loader">
     <img src="photos/load.gif">
     <h1>LOADING...</h1>
   </div>
@@ -315,7 +316,7 @@
   </nav>
   <!--MAIN-->
   <!--SCROLL-CTN-->
-  <div id="luxy" style="width: 100%; position: fixed; transform: translate3d(0px, -123.33px, 0px);">
+  <div id="luxy">
       <!--BANNER-->
       <div class="bnr col-12">
         <div class="bnr_c">
@@ -323,19 +324,19 @@
           <div>
             <p class="delay">
               <span class="row">
-                <span data-emergence="visible" class="">Hello! I'm Abhishek, based in New Delhi</span>
+                <span data-emergence="hidden">Hello! I'm Abhishek, based in New Delhi</span>
               </span>
               <span class="row">
-                <span data-emergence="visible" class="">I am a passionate and creative UI/UX Designer </span>
+                <span data-emergence="hidden">I am a passionate and creative UI/UX Designer </span>
               </span>
               <span class="row">
-                <span data-emergence="visible" class="">with experience in creating highly polished</span>
+                <span data-emergence="hidden">with experience in creating highly polished</span>
               </span>
               <span class="row">
-                <span data-emergence="visible" class="">Interfaces for the web and mobile.</span>
+                <span data-emergence="hidden">Interfaces for the web and mobile.</span>
               </span><br>
               <span class="row">
-                <span data-emergence="visible" class=""><a style="text-decoration: underline;" href="about/">Read More About Me</a></span>
+                <span data-emergence="hidden"><a style="text-decoration: underline;" href="about/">Read More About Me</a></span>
               </span>
             </p>
           </div>
@@ -343,34 +344,34 @@
         <div class="bnr_t">
 
           <div class="no-out" style="z-index: 1">
-            <h1 class="luxy-el" data-horizontal="1" data-speed-x="-35" style="transform: translate3d(-86.33px, 2.47px, 0px);">
+            <h1 class="luxy-el" data-horizontal="1" data-speed-x="-35">
              <span class="row">
-               <span data-emergence="visible" class="">Portfolio Portfolio</span>
+               <span data-emergence="hidden">Flavorist of mesmerizing</span>
              </span>
             </h1>
-            <h1 class="le luxy-el" data-horizontal="1" data-speed-x="35" style="transform: translate3d(86.33px, 2.47px, 0px);">
+            <h1 class="le luxy-el" data-horizontal="1" data-speed-x="35">
              <span class="row">
-               <span data-emergence="visible" class="">Anoushka Bhattacharya</span>
+               <span data-emergence="hidden">Interface and designs</span>
              </span>
             </h1>
           </div>
 
-          <div style="z-index: 2; margin-left: 30.3%; transform: translate3d(0px, -126.87px, 0px);" class="bnr_img imgrev luxy-el" data-speed-y="-19" data-offset="-80" data-emergence="visible">
-            <img id="imgb" src="photos/b2.jpg">
+          <div style="z-index: 2; margin-left: 30.3%;" class="bnr_img imgrev luxy-el" data-speed-y="-19" data-offset="-80" data-emergence="hidden">
+            <img id="imgb" src="photos/b1.jpg">
             <div>
-              <img id="imgc" src="photos/c2.png" class="luxy-el" data-speed-y="15" style="transform: translate3d(0px, 37px, 0px);">
+              <img id="imgc" src="photos/c1.png" class="luxy-el" data-speed-y="15">
             </div>
           </div>
 
           <div style="z-index: 3;">
-            <h1 class="luxy-el outline" data-horizontal="1" data-speed-x="-35" style="transform: translate3d(-86.33px, 2.47px, 0px);">
+            <h1 class="luxy-el outline" data-horizontal="1" data-speed-x="-35">
              <span class="row">
-               <span data-emergence="visible" class="">Portfolio Portfolio</span>
+               <span data-emergence="hidden">Flavorist of mesmerizing</span>
              </span>
             </h1>
-            <h1 class="le luxy-el outline" data-horizontal="1" data-speed-x="35" style="transform: translate3d(86.33px, 2.47px, 0px);">
+            <h1 class="le luxy-el outline" data-horizontal="1" data-speed-x="35">
              <span class="row">
-               <span data-emergence="visible" class="">Anoushka Bhattacharya</span>
+               <span data-emergence="hidden">Interface and designs</span>
              </span>
             </h1>
           </div>
@@ -380,17 +381,17 @@
       <div class="wrk">
         <div class="wrk_t">
           <p class="row" style="margin-top: 12px;">
-            <span data-emergence="visible" style="transition-delay: .8s" class="">FEATURED PROJECTS</span>
+            <span data-emergence="hidden" style="transition-delay: .8s">FEATURED PROJECTS</span>
           </p>
           <h1>
             <span class="row">
-              <span class="outline -o" data-emergence="visible">work</span>
+              <span class="outline -o" data-emergence="hidden">work</span>
             </span>
             <span class="row">
-              <span data-emergence="visible" class="">work</span>
+              <span data-emergence="hidden">work</span>
             </span>
             <span class="row">
-              <span class="outline -o" data-emergence="visible">work</span>
+              <span class="outline -o" data-emergence="hidden">work</span>
             </span>
           </h1>
         </div>
@@ -398,9 +399,9 @@
         <div class="wrk_s">
           <div class="wrk_e" style="width: 40vw;">
             <a target="_blank" href="http://bit.ly/chuu-web">
-              <div class="w-img imgrev" data-emergence="visible" onmousemove="vis();" onmouseout="hid();">
+              <div class="w-img imgrev" data-emergence="hidden" onmousemove="vis();" onmouseout="hid();">
                 <img class="bg" src="photos/chbg.jpg">
-                <div style="left: 30.8%; transform: translate3d(0px, -55.13px, 0px);" class="luxy-el" data-speed-y="4" data-offset="-65">
+                <div style="left: 30.8%" class="luxy-el" data-speed-y="4" data-offset="-65">
                   <img id="img_chu" src="photos/chuu.png">
                 </div>
               </div>
@@ -430,7 +431,7 @@
             <a target="_blank" href="http://bit.ly/shosiz">
               <div class="w-img imgrev" data-emergence="hidden" onmousemove="vis();" onmouseout="hid();">
                 <img class="bg" src="photos/shbg.jpg">
-                <div style="left: 5%; transform: translate3d(0px, 97.67px, 0px);" class="luxy-el" data-speed-y="-5" data-offset="110">
+                <div style="left: 5%" class="luxy-el" data-speed-y="-5" data-offset="110">
                   <img id="img_sho" src="photos/shoe.png">
                 </div>
               </div>
@@ -450,7 +451,7 @@
             <a target="_blank" href="http://bit.ly/abudezo">
               <div class="w-img imgrev" data-emergence="hidden" onmousemove="vis();" onmouseout="hid();">
                 <img class="bg" src="photos/pobg.jpg">
-                <div class="luxy-el" data-speed-y="-4" data-offset="175" style="transform: translate3d(0px, 165.13px, 0px);">
+                <div class="luxy-el" data-speed-y="-4" data-offset="175">
                   <img id="img_abu" src="photos/post.png">
                 </div>
               </div>
@@ -467,7 +468,7 @@
             <a target="_blank" href="https://bit.ly/ptemplate1">
               <div class="w-img imgrev" data-emergence="hidden" onmousemove="vis();" onmouseout="hid();">
                 <img class="bg" src="photos/ptbg.jpg">
-                <div style="left: 8.1%; transform: translate3d(0px, -80.07px, 0px);" class="luxy-el" data-speed-y="2" data-offset="-85">
+                <div style="left: 8.1%" class="luxy-el" data-speed-y="2" data-offset="-85">
                   <img id="img_sta" src="photos/pt.png">
                 </div>
               </div>
@@ -498,7 +499,7 @@
               <span class="outline -o" style="transition-delay: .5s" data-emergence="hidden">CONTACT</span>
             </span>
           </h1>
-          <div class="imgrev luxy-el" data-speed-y="-4.5" data-offset="160" data-emergence="hidden" style="transform: translate3d(0px, 148.9px, 0px);">
+          <div class="imgrev luxy-el" data-speed-y="-4.5" data-offset="160" data-emergence="hidden" >
             <img src="photos/cont2.gif">
           </div>
         </div>
@@ -529,15 +530,15 @@
              <span data-emergence="hidden">Designed and developed by Abhishek Jha.</span>
            </span>
            <span class="row">
-             <span data-emergence="hidden">© <span style="display: inline;" id="year">2021</span> All rights reserved.</span>
+             <span data-emergence="hidden">© <span style="display: inline;" id="year"></span> All rights reserved.</span>
            </span>
          </p>
         </div>
        </div>
       </div>
       <!--SCROLL-END-->
-  
-  <span id="float" class="float beh" style="left: 768px; top: 436px;"><img src="photos/beh.png"></span>
+  </div>
+  <span id="float" class="float beh"><img src="photos/beh.png"></span>
   <!--SCRIPTS-->
   <script>
   document.onreadystatechange = function() {
@@ -647,6 +648,5 @@
     Congrats Time Traveller, You are in the 90s. Now in order to access this site you either need to
     update your browser or enable Javascript from settings. And please don't use Internet explorer :).
   </noscript>
-
-
-</body></html>
+</body>
+</html>
